# feed-api/src/main/java/git/dimitrikvirik/feedapi/controller/FeedPostController.java
@@ -11,6 +11,8 @@ import org.springframework.web.server.ServerWebExchange;
 import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
 
+import java.util.List;
+
 @RestController
 @RequiredArgsConstructor
 public class FeedPostController implements PostApi {
@@ -29,8 +31,8 @@ public class FeedPostController implements PostApi {
 
 
 	@Override
-	public Mono<ResponseEntity<Flux<PostResponse>>> getAllPosts(Integer page, Integer size, String searchText, ServerWebExchange exchange) {
-		return postFacade.getAllPosts(page, size, searchText, exchange);
+	public Mono<ResponseEntity<Flux<PostResponse>>> getAllPosts(Integer page, Integer size, String searchText, List<String> topics, ServerWebExchange exchange) {
+		return postFacade.getAllPosts(page, size, searchText, topics, exchange);
 	}
 
 	@Override
